# randproject

./: .gitignore  ASSETS_USAGE.md  README.md  SOCIAL_MEDIA_SETUP.md  railway.json
backend/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
backend/app/: main.py  seed_games.py
backend/app/api/: auth.py  draws.py  games.py  results.py  social.py
backend/app/core/: config.py  social_config.py
backend/app/db/: session.py
backend/app/models/: __init__.py  base.py  draw.py  game.py  manager.py  result.py  result_approval.py
backend/app/repositories/: draws.py  games.py  managers.py  result_approvals.py  results.py
backend/app/schemas/: auth.py  draw.py  game.py  result.py  social.py
backend/app/services/: auth.py  draw_notifier.py  draws.py  email.py  games.py  results.py  social_media.py
backend/docs/: README.md  generate_presentation.py  presentation.pptx  slides_content.json
frontend/: .env.production  index.html  package-lock.json  package.json  tailwind.config.ts  vercel.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/design9/: Confetti.tsx  GameBadge.tsx  LotteryBall.tsx  RandLogo.tsx
frontend/src/components/ui/: button.tsx  (+3 more)
frontend/src/contexts/: AuthContext.tsx
frontend/src/data/: mockData.ts
frontend/src/lib/: api.ts  gameAssets.ts  imageGenerator.ts  share.ts
frontend/src/pages/: Dashboard.tsx  Design9DemoPage.tsx  DesignGuidePage.tsx  GamesPage.tsx  HistoryPage.tsx  LoginPage.tsx  PostResultsPage.tsx  SignupPage.tsx
frontend/src/types/: lottery.ts
(+9 files in other folders)
